[gd_scene load_steps=7 format=3 uid="uid://ccqoreueuxdb7"]

[ext_resource type="Script" uid="uid://bejhcq4qp4iqo" path="res://HUD.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="2_efote"]
[ext_resource type="Script" uid="uid://buw65hcn64pjg" path="res://scripts/ClientConnect.gd" id="3_ne771"]
[ext_resource type="Script" uid="uid://bhqbw062g5otj" path="res://scripts/ServerConnect.gd" id="4_xxqia"]

[sub_resource type="InputEventAction" id="InputEventAction_fopy7"]
action = &"start_game"

[sub_resource type="Shortcut" id="4"]
events = [SubResource("InputEventAction_fopy7")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -270.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Dodge the
Creeps"
horizontal_alignment = 1

[node name="Virtual Joystick" parent="." instance=ExtResource("2_efote")]
modulate = Color(1, 1, 1, 0.25098)
offset_left = 3.0
offset_top = -301.0
offset_right = 303.0
offset_bottom = -1.0
visibility_mode = 1
action_left = "move_left"
action_right = "move_right"
action_up = "move_up"
action_down = "move_down"

[node name="ButtonsArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="StartServerButton" type="Button" parent="ButtonsArea"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -105.5
offset_top = -167.0
offset_right = 105.5
offset_bottom = -109.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 36
shortcut = SubResource("4")
text = "Start server"

[node name="StartClientButton" type="Button" parent="ButtonsArea"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -105.5
offset_top = -91.0
offset_right = 105.5
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 36
shortcut = SubResource("4")
text = "Start client"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="NameInput" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerInputLabel" type="Label" parent="NameInput"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -34.0
offset_right = 45.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Name:"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="NameInput"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = 18.0
offset_right = 151.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConfirmNameButton" type="Button" parent="NameInput"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = 100.0
offset_right = 59.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "Confirm"

[node name="PlayerInputLabel2" type="Label" parent="NameInput"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = 70.0
offset_right = 145.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.708199, 0.355924, 0.369665, 1)
theme_override_font_sizes/font_size = 12
text = "Note: 3-10 letters"

[node name="ClientDiscovery" type="Node" parent="NameInput"]
script = ExtResource("3_ne771")

[node name="LobbyArea" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerListLabel" type="Label" parent="LobbyArea"]
layout_mode = 1
offset_left = -45.5
offset_top = -72.0
offset_right = 45.5
offset_bottom = -38.0
theme_override_font_sizes/font_size = 24
text = "Players:"
horizontal_alignment = 1

[node name="PlayerList" type="ItemList" parent="LobbyArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.5
offset_top = -16.0
offset_right = 173.5
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartGameButton" type="Button" parent="LobbyArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = 195.5
offset_right = 59.0
offset_bottom = 226.5
grow_horizontal = 2
grow_vertical = 2
text = "Everybody's in!"

[node name="ServerDiscovery" type="Node" parent="LobbyArea"]
script = ExtResource("4_xxqia")

[connection signal="client_discovery" from="." to="NameInput/ClientDiscovery" method="_on_start_server_discovery"]
[connection signal="server_discovery" from="." to="LobbyArea/ServerDiscovery" method="_on_start_server_discovery"]
[connection signal="pressed" from="ButtonsArea/StartServerButton" to="." method="_on_start_server_button_pressed"]
[connection signal="pressed" from="ButtonsArea/StartClientButton" to="." method="_on_start_client_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="text_changed" from="NameInput/LineEdit" to="." method="_on_name_input_changed"]
[connection signal="pressed" from="NameInput/ConfirmNameButton" to="." method="_on_name_commit_button_pressed"]
[connection signal="server_discovered" from="NameInput/ClientDiscovery" to="." method="_on_server_discovered"]
[connection signal="pressed" from="LobbyArea/StartGameButton" to="." method="_on_start_game_button_pressed"]
